Update all the notebooks to use the Keras SineReLU instead of the coded one.

--- a/notebooks/ekholabs/kaggle-iceberg-challenge-cnn-relu.ipynb
+++ b/notebooks/ekholabs/kaggle-iceberg-challenge-cnn-relu.ipynb
@@ -23,17 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -60,12 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_json(\"kaggle/datasets/iceberg/train.json\")\n",
-    "test = pd.read_json(\"kaggle/datasets/iceberg/test.json\")"
+    "train = pd.read_json(\"../../kaggle/datasets/iceberg/train.json\")\n",
+    "test = pd.read_json(\"../../kaggle/datasets/iceberg/test.json\")"
    ]
   },
   {
@@ -77,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,65 +158,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 75, 75, 16)        1216      \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 37, 37, 16)        0         \n",
-      "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 37, 37, 16)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 37, 37, 32)        12832     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 18, 18, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 18, 18, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 16, 16, 64)        18496     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 8, 8, 64)          0         \n",
-      "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 8, 8, 64)          0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 6, 6, 64)          36928     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_4 (MaxPooling2 (None, 3, 3, 64)          0         \n",
-      "_________________________________________________________________\n",
-      "dropout_4 (Dropout)          (None, 3, 3, 64)          0         \n",
-      "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 576)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 512)               295424    \n",
-      "_________________________________________________________________\n",
-      "activation_2 (Activation)    (None, 512)               0         \n",
-      "_________________________________________________________________\n",
-      "dropout_5 (Dropout)          (None, 512)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 512)               262656    \n",
-      "_________________________________________________________________\n",
-      "activation_3 (Activation)    (None, 512)               0         \n",
-      "_________________________________________________________________\n",
-      "dropout_6 (Dropout)          (None, 512)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 1)                 513       \n",
-      "_________________________________________________________________\n",
-      "activation_4 (Activation)    (None, 1)                 0         \n",
-      "=================================================================\n",
-      "Total params: 628,065\n",
-      "Trainable params: 628,065\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.compile(loss = 'binary_crossentropy', optimizer = 'adam', metrics=['accuracy'])\n",
     "model.summary()"
@@ -239,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,36 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "1200/1200 [==============================] - 175s - loss: 0.4993 - acc: 0.7564 - val_loss: 0.4062 - val_acc: 0.8100\n",
-      "Epoch 2/10\n",
-      "1200/1200 [==============================] - 179s - loss: 0.4069 - acc: 0.8056 - val_loss: 0.3676 - val_acc: 0.8365\n",
-      "Epoch 3/10\n",
-      "1200/1200 [==============================] - 176s - loss: 0.3648 - acc: 0.8265 - val_loss: 0.3003 - val_acc: 0.8510\n",
-      "Epoch 4/10\n",
-      "1200/1200 [==============================] - 184s - loss: 0.3193 - acc: 0.8488 - val_loss: 0.3011 - val_acc: 0.8643\n",
-      "Epoch 5/10\n",
-      "1200/1200 [==============================] - 196s - loss: 0.3092 - acc: 0.8523 - val_loss: 0.3123 - val_acc: 0.8570\n",
-      "Epoch 6/10\n",
-      "1200/1200 [==============================] - 179s - loss: 0.2980 - acc: 0.8623 - val_loss: 0.2781 - val_acc: 0.8916\n",
-      "Epoch 7/10\n",
-      "1200/1200 [==============================] - 176s - loss: 0.2937 - acc: 0.8636 - val_loss: 0.2846 - val_acc: 0.8739\n",
-      "Epoch 8/10\n",
-      "1200/1200 [==============================] - 185s - loss: 0.2718 - acc: 0.8735 - val_loss: 0.2934 - val_acc: 0.8742\n",
-      "Epoch 9/10\n",
-      "1200/1200 [==============================] - 179s - loss: 0.2866 - acc: 0.8655 - val_loss: 0.3771 - val_acc: 0.8444\n",
-      "Epoch 10/10\n",
-      "1200/1200 [==============================] - 183s - loss: 0.2685 - acc: 0.8751 - val_loss: 0.2924 - val_acc: 0.8792\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hist = model.fit_generator(train_generator,\n",
     "                           steps_per_epoch = 1200,\n",
@@ -339,18 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "384/401 [===========================>..] - ETA: 0sTest loss: 0.269289418052\n",
-      "Test accuracy: 0.887780548777\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "score = model.evaluate(X_valid, y_valid, verbose = 1)\n",
     "print('Test loss:', score[0])\n",
@@ -366,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
