--- a/notebooks/nlp/deep_net_sentiment_classifier_for_imdb.ipynb
+++ b/notebooks/nlp/deep_net_sentiment_classifier_for_imdb.ipynb
@@ -30,6 +30,8 @@
     "from keras.layers import Embedding\n",
     "from keras.callbacks import ModelCheckpoint, EarlyStopping, TensorBoard\n",
     "\n",
+    "from keras_contrib.layers.advanced_activations import SineReLU\n",
+    "\n",
     "import sklearn.metrics\n",
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
@@ -231,48 +233,6 @@
    "outputs": [],
    "source": [
     "' '.join(index_word[id] for id in X_train[5])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### SineReLU Activation Function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras import backend as K\n",
-    "from keras.engine import Layer\n",
-    "from keras.utils.generic_utils import get_custom_objects\n",
-    "\n",
-    "class SineReLU(Layer):\n",
-    "\n",
-    "    def __init__(self, epsilon=0.0055, **kwargs):\n",
-    "        super(SineReLU, self).__init__(**kwargs)\n",
-    "        self.supports_masking = True\n",
-    "        self.epsilon = K.cast_to_floatx(epsilon)\n",
-    "\n",
-    "    def build(self, input_shape):\n",
-    "        self.scale = np.exp(np.sqrt(np.pi))\n",
-    "        super(SineReLU, self).build(input_shape)\n",
-    "\n",
-    "    def call(self, Z):\n",
-    "        m = self.epsilon * (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * self.scale)\n",
-    "        A = K.maximum(m, Z)\n",
-    "        return A\n",
-    "\n",
-    "    def get_config(self):\n",
-    "        config = {'epsilon': float(self.epsilon)}\n",
-    "        base_config = super(SineReLU, self).get_config()\n",
-    "        return dict(list(base_config.items()) + list(config.items()))\n",
-    "\n",
-    "    def compute_output_shape(self, input_shape):\n",
-    "        return input_shape"
    ]
   },
   {
@@ -497,8 +457,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ydf = pd.DataFrame(list(zip(y_hat[:,0], y_valid)), columns=['y_hat', 'y'])\n",
-    "ydf.head(10)"
+    "#SineReLU V2\n",
+    "\n",
+    "\n",
+    "\n",
+    "#ReLU\n",
+    "\n"
    ]
   },
   {
@@ -507,7 +471,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "' '.join(index_word[id] for id in all_X_valid[0])"
+    "# ydf = pd.DataFrame(list(zip(y_hat[:,0], y_valid)), columns=['y_hat', 'y'])\n",
+    "# ydf.head(10)"
    ]
   },
   {
@@ -516,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "' '.join(index_word[id] for id in all_X_valid[6])"
+    "# ' '.join(index_word[id] for id in all_X_valid[0])"
    ]
   },
   {
@@ -525,7 +490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ydf[(ydf.y == 0) & (ydf.y_hat > 0.9)].head(10)"
+    "# ' '.join(index_word[id] for id in all_X_valid[6])"
    ]
   },
   {
@@ -534,7 +499,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "' '.join(index_word[id] for id in all_X_valid[112])"
+    "# ydf[(ydf.y == 0) & (ydf.y_hat > 0.9)].head(10)"
    ]
   },
   {
@@ -543,7 +508,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ydf[(ydf.y == 1) & (ydf.y_hat < 0.1)].head(10)"
+    "# ' '.join(index_word[id] for id in all_X_valid[112])"
    ]
   },
   {
@@ -552,7 +517,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "' '.join(index_word[id] for id in all_X_valid[101])"
+    "# ydf[(ydf.y == 1) & (ydf.y_hat < 0.1)].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ' '.join(index_word[id] for id in all_X_valid[101])"
    ]
   },
   {
@@ -579,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
