--- a/notebooks/nlp/multi-conv_net_sentiment_classifier_for_imdb.ipynb
+++ b/notebooks/nlp/multi-conv_net_sentiment_classifier_for_imdb.ipynb
@@ -16,9 +16,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/opt/conda/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n",
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import keras\n",
     "from keras.datasets import imdb\n",
@@ -28,9 +48,15 @@
     "from keras.layers import Dense, Flatten, Dropout, Activation\n",
     "from keras.layers import Embedding, Conv1D, SpatialDropout1D, GlobalMaxPool1D\n",
     "from keras.callbacks import ModelCheckpoint\n",
+    "\n",
+    "from keras_contrib.layers.advanced_activations import SineReLU\n",
+    "\n",
     "import os\n",
+    "\n",
     "from sklearn.metrics import roc_auc_score\n",
+    "\n",
     "import pandas as pd\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
@@ -44,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +103,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://s3.amazonaws.com/text-datasets/imdb.npz\n",
+      "17465344/17464789 [==============================] - 6s 0us/step\n"
+     ]
+    }
+   ],
    "source": [
     "(X_train, y_train), (X_valid, y_valid) = imdb.load_data(num_words=n_unique_words)"
    ]
@@ -89,6 +124,23 @@
    "metadata": {},
    "source": [
     "#### Preprocess Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 1 ... 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_valid)"
    ]
   },
   {
@@ -286,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
