--- a/notebooks/nlp/word2vec.ipynb
+++ b/notebooks/nlp/word2vec.ipynb
@@ -95,7 +95,18 @@
    "outputs": [],
    "source": [
     "# Due to lack of resources, I'm not working with the full Gutenberg dataset (18 books).\n",
-    "gberg_sent_tokens = sent_tokenize(gutenberg.raw(fileids=['bible-kjv.txt', 'austen-emma.txt', 'austen-persuasion.txt', 'austen-sense.txt', 'carroll-alice.txt']))"
+    "gberg_sent_tokens = sent_tokenize(gutenberg.raw(fileids=['austen-sense.txt',\n",
+    " 'blake-poems.txt',\n",
+    " 'bryant-stories.txt',\n",
+    " 'burgess-busterbrown.txt',\n",
+    " 'carroll-alice.txt',\n",
+    " 'chesterton-ball.txt',\n",
+    " 'chesterton-brown.txt',\n",
+    " 'chesterton-thursday.txt',\n",
+    " 'edgeworth-parents.txt',\n",
+    " 'melville-moby_dick.txt',\n",
+    " 'milton-paradise.txt',\n",
+    " 'shakespeare-caesar.txt']))"
    ]
   },
   {
@@ -141,7 +152,18 @@
    "outputs": [],
    "source": [
     "# Due to lack of resources, I'm not working with the full Gutenberg dataset (18 books).\n",
-    "gberg_sents = gutenberg.sents(fileids=['bible-kjv.txt', 'austen-emma.txt', 'austen-persuasion.txt', 'austen-sense.txt', 'carroll-alice.txt'])"
+    "gberg_sents = gutenberg.sents(fileids=['austen-sense.txt',\n",
+    " 'blake-poems.txt',\n",
+    " 'bryant-stories.txt',\n",
+    " 'burgess-busterbrown.txt',\n",
+    " 'carroll-alice.txt',\n",
+    " 'chesterton-ball.txt',\n",
+    " 'chesterton-brown.txt',\n",
+    " 'chesterton-thursday.txt',\n",
+    " 'edgeworth-parents.txt',\n",
+    " 'melville-moby_dick.txt',\n",
+    " 'milton-paradise.txt',\n",
+    " 'shakespeare-caesar.txt'])"
    ]
   },
   {
@@ -178,7 +200,18 @@
    "outputs": [],
    "source": [
     "# Due to lack of resources, I'm not working with the full Gutenberg dataset (18 books).\n",
-    "len(gutenberg.words(fileids=['bible-kjv.txt', 'austen-emma.txt', 'austen-persuasion.txt', 'austen-sense.txt', 'carroll-alice.txt']))"
+    "len(gutenberg.words(fileids=['austen-sense.txt',\n",
+    " 'blake-poems.txt',\n",
+    " 'bryant-stories.txt',\n",
+    " 'burgess-busterbrown.txt',\n",
+    " 'carroll-alice.txt',\n",
+    " 'chesterton-ball.txt',\n",
+    " 'chesterton-brown.txt',\n",
+    " 'chesterton-thursday.txt',\n",
+    " 'edgeworth-parents.txt',\n",
+    " 'melville-moby_dick.txt',\n",
+    " 'milton-paradise.txt',\n",
+    " 'shakespeare-caesar.txt']))"
    ]
   },
   {
@@ -371,7 +404,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsne = TSNE(n_components=2, n_iter=200)"
+    "tsne = TSNE(n_components=2, n_iter=250)"
    ]
   },
   {
