--- a/notebooks/ekholabs/kaggle-iceberg-challenge-cnn-SineReLU.ipynb
+++ b/notebooks/ekholabs/kaggle-iceberg-challenge-cnn-SineReLU.ipynb
@@ -58,8 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_json(\"kaggle/datasets/iceberg/train.json\")\n",
-    "test = pd.read_json(\"kaggle/datasets/iceberg/test.json\")"
+    "train = pd.read_json(\"../../kaggle/datasets/iceberg/train.json\")\n",
+    "test = pd.read_json(\"../../kaggle/datasets/iceberg/test.json\")"
    ]
   },
   {
@@ -78,7 +78,7 @@
     "X_band_1 = np.array([np.array(band).astype(np.float32).reshape(75, 75) for band in train[\"band_1\"]])\n",
     "X_band_2 = np.array([np.array(band).astype(np.float32).reshape(75, 75) for band in train[\"band_2\"]])\n",
     "\n",
-    "X_train = np.concatenate([X_band_1[:, :, :, np.newaxis], X_band_2[:, :, :, np.newaxis],((X_band_1 + X_band_2) / 2)[:, :, :, np.newaxis]], axis = -1)"
+    "X_train = np.concatenate([X_band_1[:, :, :, np.newaxis], X_band_2[:, :, :, np.newaxis], ((X_band_1 + X_band_2) / 2)[:, :, :, np.newaxis]], axis = -1)"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "outputs": [],
    "source": [
     "target_train = train['is_iceberg']\n",
-    "X_train, X_valid, y_train, y_valid = train_test_split(X_train, target_train, random_state = 1, train_size = 0.75)"
+    "X_train_cv, X_valid, y_train_cv, y_valid = train_test_split(X_train, target_train, random_state = 1, test_size = 0.25)"
    ]
   },
   {
@@ -111,11 +111,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cnn_epsilon = 0.0025\n",
-    "dense_epsilon = 0.0083\n",
+    "cnn_epsilon = 8e-4\n",
+    "dense_epsilon = cnn_epsilon\n",
     "\n",
     "#Building the model\n",
     "model = Sequential()\n",
+    "\n",
     "#Conv Layer 1\n",
     "model.add(Conv2D(16, kernel_size = 5, padding = 'same', input_shape = (75, 75, 3)))\n",
     "model.add(SineReLU(cnn_epsilon))\n",
@@ -154,8 +155,7 @@
     "model.add(Dropout(0.2))\n",
     "\n",
     "#Sigmoid Layer\n",
-    "model.add(Dense(1))\n",
-    "model.add(Activation('sigmoid'))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
     "\n",
     "model.summary()"
    ]
@@ -215,7 +215,7 @@
     "                            width_shift_range = 0.1,\n",
     "                            rotation_range = 10)\n",
     "\n",
-    "train_generator = train_datagen.flow(X_train, y_train, batch_size = 16)\n",
+    "train_generator = train_datagen.flow(X_train_cv, y_train_cv, batch_size = 16)\n",
     "\n",
     "validation_generator = test_datagen.flow(X_valid, y_valid, batch_size = 16)"
    ]
@@ -234,11 +234,11 @@
    "outputs": [],
    "source": [
     "hist = model.fit_generator(train_generator,\n",
-    "                           steps_per_epoch = 1200,\n",
+    "                           steps_per_epoch = 600,\n",
     "                           epochs = 50,\n",
     "                           verbose = 1,\n",
     "                           validation_data = validation_generator,\n",
-    "                           validation_steps = 600,\n",
+    "                           validation_steps = 300,\n",
     "                           callbacks = [tensorboard])\n",
     "\n",
     "# model.fit(X_train_cv, y_train_cv,\n",
